--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  		<div class="panel panel-primary">
            <div class="panel-heading">
        		 <h3 class="panel-title">Panel title</h3>
-          </div>
+           </div>
 
               <div class="panel-body">
                 <div class="radio">
@@ -49,7 +49,97 @@
         			<div class="radio">
            			 <label>
               			  <input type="radio" name="optradio">Option 1</label>
-      				 </div>
+      				</div>
+
+        				  <div class="radio">
+          				 	 <label>
+               					 <input type="radio" name="optradio">Option 1</label>
+        				</div>
+   					 </div>
+				</div>
+		<div class="panel panel-primary">
+           <div class="panel-heading">
+       		 <h3 class="panel-title">Panel title</h3>
+           </div>
+
+              <div class="panel-body">
+                <div class="radio">
+                   <label>
+               		 <input type="radio" name="optradio">Option 1</label>
+        		</div>
+
+        			<div class="radio">
+           			 <label>
+              			  <input type="radio" name="optradio">Option 1</label>
+      				</div>
+
+        				  <div class="radio">
+          				 	 <label>
+               					 <input type="radio" name="optradio">Option 1</label>
+        				</div>
+   					 </div>
+				</div>
+		<div class="panel panel-primary">
+           <div class="panel-heading">
+       		 <h3 class="panel-title">Panel title</h3>
+           </div>
+
+              <div class="panel-body">
+                <div class="radio">
+                   <label>
+               		 <input type="radio" name="optradio">Option 1</label>
+        		</div>
+
+        			<div class="radio">
+           			 <label>
+              			  <input type="radio" name="optradio">Option 1</label>
+      				</div>
+
+        				  <div class="radio">
+          				 	 <label>
+               					 <input type="radio" name="optradio">Option 1</label>
+        				</div>
+   					 </div>
+				</div>
+
+		<div class="panel panel-primary">
+           <div class="panel-heading">
+       		 <h3 class="panel-title">Panel title</h3>
+           </div>
+
+              <div class="panel-body">
+                <div class="radio">
+                   <label>
+               		 <input type="radio" name="optradio">Option 1</label>
+        		</div>
+
+        			<div class="radio">
+           			 <label>
+              			  <input type="radio" name="optradio">Option 1</label>
+      				</div>
+
+        				  <div class="radio">
+          				 	 <label>
+               					 <input type="radio" name="optradio">Option 1</label>
+        				</div>
+   					 </div>
+				</div>
+
+		<div class="panel panel-primary">
+           <div class="panel-heading">
+       		 <h3 class="panel-title">Panel title</h3>
+           </div>
+
+              <div class="panel-body">
+                <div class="radio">
+                   <label>
+               		 <input type="radio" name="optradio">Option 1</label>
+        		</div>
+
+        			<div class="radio">
+           			 <label>
+              			  <input type="radio" name="optradio">Option 1</label>
+      				</div>
 
         				  <div class="radio">
           				 	 <label>
@@ -58,25 +148,28 @@
    					 </div>
 				</div>
    		   </div>
- 
-      <div class="col-xs-5 col-md-4 col-sm-4 col-lg-4">
+ 		
 
-         <div class="panel panel-primary">
-    		<div id="divTotal" class="panel-heading">
-        	  <h3 class="panel-title">Total</h3>
+
+      <div class="col-xs-5 col-md-4 col-sm-4 col-lg-4" data-spy="affix" data-offset-top="20">
+
+         <div  class="panel panel-primary">
+    		<div id="divTotal" class="panel-heading" >
+        	  <h3  class="panel-title">Total</h3>
     		</div>
 
-   		 <div class="panel-body">
-        	<h2>Rs. 100</h2>
-   		 </div>
+   		      <div class="panel-body">
+        	     <h2>Rs. 100</h2>
+   		      </div>
 
-		</div>
-		<div class="text-center">
-  		  <a href="#/checkout" class="btn btn-danger">Checkout <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-    	 </a>
-		</div>
+		 </div>
 
-     </div>
+		      <div class="text-center">
+  		         <a href="#/checkout" class="btn btn-danger">Checkout <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+    	         </a>
+		      </div>
+
+      </div>
 
    	 </div>
     </div>
