--- a/public/main.html
+++ b/public/main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
- 
+    <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
     <style>
     	body {
     		background:#ffd11a;
