resolved ng-view error

--- a/public/main.html
+++ b/public/main.html
@@ -9,13 +9,15 @@
 
 	<title>Angular-Bootstrap Shop Cart</title>
 
-	<!-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSS -->
+   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+     <script type="text/javascript" src="public/script/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
     <script src="public/cart/cart.js"></script>
-    <script src="public/app.js"></script>\
+    <script src="public/cart/app.js"></script>
     
     <style>
     	body {
@@ -37,7 +39,7 @@
 <body>
  
     <div ng-view></div>
-    <script type="text/javascript" src="public/script/angular.js"></script>
+   
  
 </body>
 </html>
