--- a/public/main.html
+++ b/public/main.html
@@ -16,6 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
+    <script src="public/checkout/checkout.js"></script>
     <script src="public/cart/cart.js"></script>
     <script src="public/cart/app.js"></script>
     
